# binky

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  crfile.c  crfile.h  crmerge.c  gamedata.c  gamedata.h  gamedata.test.c  main.c  strings.h  unittest.c
s/: build
